<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>
    <string name="action_settings" tools:ignore="UnusedResources">Settings</string>
    <string name="action_refresh" tools:ignore="UnusedResources">Refresh</string>
    <string name="sort_by_rating">Sort By Rating</string>
    <string name="movie_poster_desc">Movie Poster Image</string>
    <string name="title_textview_text">Title</string>
    <string name="format_rel_date"><xliff:g id="release_date" example="May 1, 1969">MMMM dd yyyy</xliff:g></string>
    <string name="format_rating"><xliff:g id="rating" example="0.0">%.1f</xliff:g></string>
    <string name="format_rating_out_of">\u0020/ <xliff:g id="rating" example="10">%d</xliff:g></string>
    <string name="plot_textview_text">this is plot synopsis text</string>
    <string name="title_movie_detail">Movie Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_poster_detail_desc">Movie Poster Image</string>
    <string name="pref_sort_by_label">Sort by</string>
    <string name="pref_sort_by_pop">popularity.desc</string>
    <string name="pref_sort_by_rating">vote_average.desc</string>
    <string name="pref_sort_by_favorite">favorite</string>
    <string name="pref_sort_by_label_pop">Popularity</string>
    <string name="pref_sort_by_label_rating">Rating</string>
    <string name="pref_sort_by_label_favorite">Favorites</string>
    <string name="pref_sort_by_key">list_preference</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sort_by_menu_title">Sort By...</string>
    <string name="menu_popularity_label">Popularity</string>
    <string name="menu_rating_label">Rating</string>
    <string name="menu_favorite_label">Favorite</string>
    <string name="menu_sort_by_label">Sort By</string>
</resources>
